# quickfall

./: .cursorignore  .gitignore  CONTRIBUTING.MD  Cargo.toml  LICENSE  Makefile  README.md  ast.txt  buildAndCompile.bat  buildLinux.sh  buildUnix.sh  buildWindows.bat  main.c  out  test.qf
.github/workflows/: rust.yml
ast-parser/: Cargo.toml
benchmarks/: benchmarker.h  main.c
commons/: Cargo.toml
commons/src/: lib.rs
commons/src/err/: mod.rs
commons/src/utils/: map.rs  mod.rs  num.rs
compiler/ast/: Cargo.toml
compiler/ast/src/: ctx.rs  lib.rs  operators.rs  ranges.rs  tree.rs  types.rs
compiler/ast_parser/: Cargo.toml
compiler/ast_parser/src/: arrays.rs  comp.rs  lib.rs  literals.rs  math.rs  parser.rs  pointers.rs  ranges.rs  types.rs  unwraps.rs  use_statements.rs  value.rs
compiler/ast_parser/src/control/: for_loop.rs  if_else.rs  mod.rs  while_block.rs
compiler/ast_parser/src/functions/: arguments.rs  mod.rs  returns.rs  shadow.rs
compiler/ast_parser/src/structs/: enums.rs  members.rs  mod.rs  val.rs
compiler/ast_parser/src/variables/: decl.rs  mod.rs  static_decl.rs
compiler/astoir/: Cargo.toml
compiler/astoir/src/: lib.rs
compiler/astoir_hir/: Cargo.toml
compiler/astoir_hir/src/: casting.rs  ctx.rs  func.rs  ifelse.rs  lib.rs  lru.rs  nodes.rs  resolve.rs  scope.rs  storage.rs  structs.rs  types.rs
compiler/astoir_hir/src/context/: local.rs  mod.rs
compiler/astoir_hir/src/ctx/: branched.rs  mod.rs
compiler/astoir_hir/src/scope/: entry.rs  key.rs  mod.rs
compiler/astoir_hir_lowering/: Cargo.toml
compiler/astoir_hir_lowering/src/: arrays.rs  body.rs  booleans.rs  bools.rs  control.rs  enums.rs  func.rs  funcs.rs  lib.rs  literals.rs  math.rs  structs.rs  types.rs  unwraps.rs  uses.rs  values.rs  var.rs  vars.rs
compiler/astoir_mir/: Cargo.toml
compiler/astoir_mir/src/: builder.rs  ctx.rs  fmt.rs  funcs.rs  inst_writer.rs  lib.rs  transmutation.rs
compiler/astoir_mir/src/blocks/: hints.rs  mod.rs  refer.rs
compiler/astoir_mir/src/insts/: mod.rs  val.rs
compiler/astoir_mir/src/vals/: arrays.rs  base.rs  consts.rs  float.rs  int.rs  mod.rs  ptr.rs  refer.rs  structs.rs
compiler/astoir_mir_lowering/: Cargo.toml
compiler/astoir_mir_lowering/src/: arrays.rs  body.rs  casts.rs  funcs.rs  introductions.rs  lib.rs  lru.rs  math.rs  type_tools.rs  vars.rs
compiler/astoir_mir_lowering/src/control/: forloop.rs  ifstatement.rs  mod.rs
compiler/astoir_mir_lowering/src/values/: booleans.rs  consts.rs  mod.rs  structs.rs
compiler/astoir_typing/: Cargo.toml
compiler/astoir_typing/src/: base.rs  compacted.rs  complete.rs  hashes.rs  lib.rs  storage.rs  structs.rs
compiler/compiler_errors/: Cargo.toml
compiler/compiler_errors/src/: errors.rs  pos.rs
compiler/compiler_errors/src/errs/: base.rs  mod.rs  normal.rs
compiler/compiler_global_scope/: Cargo.toml
compiler/compiler_global_scope/src/: entry.rs  key.rs  lib.rs
compiler/compiler_main/: Cargo.toml  build.rs
compiler/compiler_main/src/: cli.rs  main.rs  version.rs
compiler/compiler_main/src/cmds/: astoir.rs  build.rs  check.rs  mod.rs
compiler/compiler_typing/: Cargo.toml
compiler/compiler_typing/src/: enums.rs  lib.rs  raw.rs  references.rs  stated.rs  storage.rs  structs.rs  transmutation.rs  tree.rs  utils.rs
compiler/compiler_typing/src/bounds/: mod.rs  normal.rs  traits.rs
compiler/compiler_typing/src/transmutation/: array.rs  mod.rs
compiler/compiler_utils/: Cargo.toml
compiler/compiler_utils/src/: hash.rs  lib.rs  logger.rs  operators.rs  storage.rs
compiler/diagnostics/: Cargo.toml
compiler/diagnostics/src/: builders.rs  diagnostic.rs  errors.rs  infos.rs  lib.rs  warnings.rs
compiler/lexer/: Cargo.toml
compiler/lexer/src/: lexer.rs  lib.rs  token.rs
compiler/llvm_ir_bridge/: Cargo.toml
compiler/llvm_ir_bridge/src/: blocks.rs  ctx.rs  funcs.rs  insts.rs  lib.rs  types.rs  utils.rs
compiler/pastel_ir/: Cargo.toml
compiler/pastel_parser/: Cargo.toml
compiler/prelude/: Cargo.toml  README.md
compiler/prelude/src/: lib.rs  types.rs
compiler/toolchain/: Cargo.toml
compiler/toolchain/src/: lib.rs
compiler/typing/: Cargo.toml
compiler/typing/src/: container.rs  enums.rs  fmt.rs  lib.rs  raw.rs  structs.rs  transmutation.rs
debug/: debugger.h
errors/: Cargo.toml
errors/src/: errors.rs  lib.rs  pos.rs
errors/src/errs/: base.rs  mod.rs  normal.rs
examples/: control.qf  e  fib.qf  for.qf  math.qf  sample.qf  structs.qf  test.qf  use_example.qf
ir/: Cargo.toml
ir/src/: bools.rs  ctx.rs  lib.rs  math.rs  refs.rs  utils.rs  values.rs
ir/src/conv/: control.rs  func.rs  mod.rs  structs.rs  val.rs
ir/src/irstruct/: funcs.rs  mod.rs  ptr.rs  staticvars.rs  structs.rs
ir/src/types/: mod.rs  storage.rs  typing.rs
lexer/: Cargo.toml
lexer/src/: lexer.rs  lib.rs  token.rs
lexer/src/toks/: comp.rs
lib/winx86-64/std/: logging.qf
lsp/: Cargo.toml
lsp/src/: bridge.rs  diags.rs  lsp.rs  main.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/ast/: literals.rs  math.rs  mod.rs  tree.rs
parser/src/ctx/: mod.rs
src/cli/: main.c
src/compiler/: compiler.c  compiler.h  ir.h  structs.h  win64.c  win64.h
src/compiler/pe/: pe.c  pe.h
src/compilerv2/: compilerv2.c
src/ir/: instructions.c  instructions.h  writer.c  writer.h
src/ir/irs/: functions.c  values.c  values.h  variables.c
src/lexer/: lexer.c  lexer.h  tokens.c  tokens.h
src/lib/: types.h
src/parser/: ast.c  ast.h  parser.c
src/parser/asts/: functions.c  imports.c  imports.h  math.c  misc.c  misc.h  types.c  types.h  values.c  variables.c
src/parser/structs/: misc.h
src/qasm/parser/: parser.c  values.c
src/qasm/writer/: writer.c
src/std/: types.h
src/utils/: fastutils.c  fastutils.h  hash.c  hash.h  logging.c  logging.h  module_resolver.c  module_resolver.h  string.c  string.h
stdlib/: README.md
stdlib/mem/: stack.qf
test-main/: Cargo.toml
test-main/src/: main.rs
testing/: Cargo.toml
testing/src/: main.rs  utils.rs
tests/: helloworld.qf  ir.c  lexer.c  main.c  parser.c  qasm.c  types.qf
utils/src/: hash.rs
(+24 files in other folders)
