[workspace]
members = [
	"compiler/ast",
	"compiler/ast_parser",
	"compiler/astoir",
	"compiler/astoir_mir",
	"compiler/astoir_mir_lowering",
	"compiler/compiler_main",
	"compiler/compiler_utils",
	"compiler/llvm_ir_bridge",
	"compiler/diagnostics",
	"compiler/prelude",
	"compiler/compiler_global_scope",
	"lsp", "compiler/typing",
]
