[workspace]
resolver = "3"
members = [
	"compiler/ast",
	"compiler/ast_parser",
	"compiler/astoir",
	"compiler/astoir_mir",
	"compiler/astoir_mir_lowering",
	"compiler/compiler_main",
	"compiler/compiler_utils",
	"compiler/llvm_ir_bridge",
	"compiler/diagnostics",
	"compiler/prelude",
	"lsp",
	"compiler/typing", "compiler/astoir_hir",
]
