[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
astoir = { path = "../compiler/astoir" }
compiler_errors = { path = "../compiler/compiler_errors" }
ast = { path = "../compiler/ast" }
ast_parser = { path = "../compiler/ast_parser" }
lexer = { path = "../compiler/lexer" }