[package]
name = "astoir_hir"
version = "0.1.0"
edition = "2024"

[dependencies]
compiler_utils = { path = "../compiler_utils" }
diagnostics = { path = "../diagnostics" }
compiler_typing = { path = "../compiler_typing" }
compiler_global_scope = { path = "../compiler_global_scope" }
lexer = { path = "../lexer" }
