[package]
name = "compiler_main"
version = "0.1.0"
edition = "2024"

[dependencies]
astoir = { path = "../astoir" }
compiler_errors = { path = "../compiler_errors" }
ast = { path = "../ast" }
ast_parser = { path = "../ast_parser" }
lexer = { path = "../lexer" }
llvm_ir_bridge = { path = "../llvm_ir_bridge" }