[package]
name = "compiler_main"
version = "0.1.0"
edition = "2024"

[dependencies]
astoir = { path = "../astoir" }
ast = { path = "../ast" }
ast_parser = { path = "../ast_parser" }
lexer = { path = "../lexer" }
llvm_ir_bridge = { path = "../llvm_ir_bridge", optional = true, default-features = false}
diagnostics = { path = "../diagnostics" }
compiler_utils = { path = "../compiler_utils" }

[features]
llvm = ["llvm_ir_bridge"]