[package]
name = "compiler_main"
version = "0.1.0"
edition = "2024"

[dependencies]
astoir = { path = "../astoir" }
astoir_mir = { path = "../astoir_mir" }
ast = { path = "../ast" }
ast_parser = { path = "../ast_parser" }
lexer = { path = "../lexer" }
llvm_ir_bridge = { path = "../llvm_ir_bridge", optional = true, default-features = false }
diagnostics = { path = "../diagnostics" }
compiler_utils = { path = "../compiler_utils" }
clap = { version = "4.0", features = ["derive"] }

[features]
llvm = ["llvm_ir_bridge"]
diagbacktraces = ["diagnostics/compiler_diagbacktraces"]
